update tap owner

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -48,5 +48,5 @@ brews:
       name: vargasraymondj
       email: vargasraymondj@gmail.com
     tap:
-      owner: n8mellis
+      owner: modzy
       name: homebrew-tap
